# master_thesis_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_clean_up.sh  build_debug.sh  build_release.sh  num_int_sommerfeld_id_err.txt
examples/: CMakeLists.txt  FEKO_comparison.cpp  dcim_test.cpp  example_01.cpp  example_complex_legendre.cpp  example_dcim.cpp  example_fmm.cpp  example_gegenbauer_formula.cpp  example_generic_gf.cpp  example_gpof_synth_signal.cpp  example_legendre_p_recurrence.cpp  example_nonspectral.cpp  example_surface_E_z.cpp  example_tlgf_hs.cpp  example_tlgf_sheet.cpp  fmm_test.cpp  generic_gf.cpp  gpof_synth_signal.cpp  test_01.cpp  tlgf_hs.cpp
examples/misc/: surface_E_z.hpp
lib/: CMakeLists.txt
lib/include/: mthesis.hpp
lib/include/mthesis/: dcim.hpp  dcim_three_level_v3.hpp  dcim_utils.hpp  definitions.hpp  dgf.hpp  dyadicgf.hpp  fmm.hpp  fmm_free_space.hpp  fmm_utils.hpp  geometry.hpp  gf.hpp  gpof.hpp  legendre_p_recurrence.hpp  mom.hpp  mthesis.hpp  nonspectral.hpp  partition_extrapolation.hpp  pe_params.hpp  scalargf.hpp  sgf.hpp  si.hpp  solution_domain.hpp  sommerfeld_integrals.hpp  spectral_gf.hpp  tlgf.hpp
lib/include/mthesis/dcim/: dcim_base.hpp  gpof.hpp  synth_exponentials.hpp  three_level_v1.hpp  three_level_v2.hpp  three_level_v3.hpp  two_level.hpp  utils.hpp
lib/include/mthesis/detail/: dcim.hpp  dcim_utils.hpp  definitions.hpp  dgf.hpp  dyadic_gf.hpp  gpof.hpp  partition_extrapolation.hpp  pe_params.hpp  scalar_gf.hpp  sgf.hpp  solution_domain.hpp  sommerfeld_integrals.hpp  spectral_gf.hpp  synth_exponentials.hpp  tlgf.hpp
lib/include/mthesis/fmm/: free_space.hpp  gegenbauer.hpp  helpers.hpp  legendre_p_recurrence.hpp  utils.hpp
lib/include/mthesis/gf/: dyadic.hpp  scalar.hpp
lib/include/mthesis/misc/: synth_exponentials.hpp
lib/include/mthesis/si/: axial_transmission.hpp  nonspectral.hpp  partition_extrapolation.hpp  sommerfeld_integral.hpp
lib/src/: dcim.cpp  dcim_three_level_v3.cpp  dcim_utils.cpp  definitions.cpp  dgf.cpp  dyadic_gf.cpp  dyadicgf.cpp  fmm.cpp  fmm_free_space.cpp  fmm_utils.cpp  gpof.cpp  mom.cpp  nonspectral.cpp  partition_extrapolation.cpp  scalar_gf.cpp  scalargf.cpp  sgf.cpp  solution_domain.cpp  sommerfeld_integrals.cpp  spectral_gf.cpp  tlgf.cpp
lib/src/dcim/: dcim_base.cpp  gpof.cpp  three_level_v1.cpp  three_level_v2.cpp  three_level_v3.cpp  two_level.cpp  utils.cpp
lib/src/fmm/: free_space.cpp  gegenbauer.cpp  helpers.cpp  utils.cpp
lib/src/gf/: dyadic.cpp  scalar.cpp
lib/src/si/: axial_transmission.cpp  nonspectral.cpp  partition_extrapolation.cpp  sommerfeld_integral.cpp
lib/test/: CMakeLists.txt  mthesis-lib-tests.cpp  test_dcim.cpp  test_dgf.cpp  test_fmm_free_space.cpp  test_gpof.cpp  test_legendre_p_recurrence.cpp  test_sgf.cpp  test_sommerfeld_integrals.cpp  test_tlgf.cpp
production/: CMakeLists.txt  num_int_sommerfeld_id_err.cpp  numerical_integration_sommerfeld_identity.cpp  production_num_int_sommerfeld_identity.cpp  thesis_complex_source_beam.cpp  thesis_csb_examples.cpp  thesis_dcim.cpp  thesis_dcim_far_range.cpp  thesis_dcim_near_range.cpp  thesis_dgf_half_space_hed.cpp  thesis_dgf_half_space_ved.cpp  thesis_dgf_hs.cpp  thesis_fmm_standard_accuracy.cpp  thesis_generic_scalar_near_region.cpp  thesis_generic_sgf_dry_ground.cpp  thesis_generic_sgf_seawater.cpp  thesis_gpof_synth_signal.cpp  thesis_numerical_integration_sommerfeld_identity.cpp  thesis_somm_id_ref_time.cpp  thesis_surface_E_z_of_f.cpp  thesis_surface_E_z_of_rho.cpp  thesis_tlgf.cpp
production/misc/: print_dcim_error.hpp  print_dgf_half_space.hpp  print_generic_sgf.hpp  write_generic_sgf_near_region.hpp
submodules/: CMakeLists.txt
